# barbara-cv

./: .pre-commit-config.yaml  Makefile  pyproject.toml
barbara_cv/: __init__.py  cli.py
barbara_cv/cv/: __init__.py  operations.py
barbara_cv/io/: __init__.py  image.py
tests/: conftest.py
tests/cv/: test_bright.py  test_crop.py
